--- a/.github/workflows/update-key-value-store.yml
+++ b/.github/workflows/update-key-value-store.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Initialize GIT
         run: |
-          git config --global user.name 'YOUR_GITHUB_USERNAME'
-          git config --global user.email 'YOUR_GITHUB_USERNAME@users.noreply.github.com'
+          git config --global user.name 'dace93'
+          git config --global user.email 'dace93@users.noreply.github.com'
 
       - name: Install .env file
         run: |
