--- a/.github/workflows/update-strava-activities.yml
+++ b/.github/workflows/update-strava-activities.yml
@@ -2,7 +2,7 @@ name: Update strava activities
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '30 18 * * *'
+    - cron:  '0 * * * *'
 jobs:
   update-strava-history:
     name: Update strava activities
